Ch 5 Log LikeliHood = targ picks loss to measure

--- a/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
@@ -585,16 +585,16 @@
     "***\n",
     "\n",
     "SOFTMAX is a good `ACTIVATION` function in the `FINAL` layer of a `CLASSIFCATION`    \n",
-    "model because they ensure that the activations:\n",
+    "model because they ensure that activations are :\n",
     "\n",
     "- `between 0 and 1`\n",
-    "- they `sum up to 1`\n",
+    "- and `sum up to 1`\n",
     "\n",
     "What does the `SOFTMAX` function do in `PRACTICE`?\n",
     " - Taking the exponential ensures all our numbers are positive\n",
     " - Dividing the sum ensures all the numbers add up to 1.0f  \n",
     " Intuitively the softmax function `REALLY` wants to pick one class among  \n",
-    " others, given exponential `AMPLIFIES` any slight relative `DIFFERENCES`  \n",
+    " others, because exponential `AMPLIFIES` any slight relative `DIFFERENCES`  \n",
     " - This makes it suitable for using as a `PROBABILITY DISTRIBUTION`, and even  \n",
     " practical for binary classification (2) instead of SIGMOID for consistency\n",
     "\n",
@@ -609,16 +609,17 @@
     "   probability of one class will decrease the total probability of all other   \n",
     "   classes, as they must sum to 1. \n",
     " - Additionally, softmax is more stable than sigmoid, and can handle a wide   \n",
-    "   range of inputs.\n",
+    "   range of inputs (more than > 2)\n",
     "***\n",
     "Explain when would it make sense to use `SIGMOID` instead of `SOFTMAX`\n",
     "\n",
     "`ANSWER` : Softmax is fit for training classifiers when : \n",
     " - we KNOW there's a DEFINITIVE label for each input\n",
     " - but at inference STRUGGLES when NO recognizable trained label is found, it  \n",
-    "   will ERRONEASLY pick whatever HAPPENSTANCE label with a SLIGHTLY higher   \n",
-    "   activation ... in this case training a SIGMOID activation using multiple  \n",
-    "   binary output columns may yield better results\n",
+    "   will ERRONEOUSLY pick whatever HAPPENSTANCE label with a SLIGHTLY higher   \n",
+    "   activation\n",
+    " - In this ^ case training a SIGMOID activation using multiple binary output  \n",
+    "   columns may yield better results\n",
     "***\n"
    ]
   },
@@ -696,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +711,7 @@
        "        [0.7446, 0.8346]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +751,7 @@
        "      <th></th>\n",
        "      <th>3</th>\n",
        "      <th>7</th>\n",
-       "      <th>SUM</th>\n",
+       "      <th>DIFFERENCE</th>\n",
        "      <th>SIGMOID</th>\n",
        "      <th>IS_THREE</th>\n",
        "    </tr>\n",
@@ -809,16 +810,16 @@
        "</div>"
       ],
       "text/plain": [
-       "          3         7       SUM   SIGMOID  IS_THREE\n",
-       "0  0.673381  0.257619  0.415762  0.602469      True\n",
-       "1  0.468925  0.460666  0.008259  0.502065      True\n",
-       "2 -2.245713 -0.372657 -1.873056  0.133188     False\n",
-       "3  4.416403 -1.275994  5.692397  0.996640      True\n",
-       "4  0.923314  0.534702  0.388613  0.595949      True\n",
-       "5  1.069809  1.618714 -0.548905  0.366118     False"
+       "          3         7  DIFFERENCE   SIGMOID  IS_THREE\n",
+       "0  0.673381  0.257619    0.415762  0.602469      True\n",
+       "1  0.468925  0.460666    0.008259  0.502065      True\n",
+       "2 -2.245713 -0.372657   -1.873056  0.133188     False\n",
+       "3  4.416403 -1.275994    5.692397  0.996640      True\n",
+       "4  0.923314  0.534702    0.388613  0.595949      True\n",
+       "5  1.069809  1.618714   -0.548905  0.366118     False"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,31 +842,33 @@
     "    # - So the overall value does NOT MATTER, whether they SUM to be HIGH or LOW\n",
     "    # - What MATTERS is the RELATIVE DIFFERENCE between the two values : WHICH is \n",
     "    #   HIGHER and BY HOW MUCH\n",
-    "    sum_row = acts[i][0] - acts[i][1]\n",
+    "    difference_row = acts[i][0] - acts[i][1]\n",
     "    # sigmoid() NORMALIZES the DIFFERENCE between the two values to 0 and 1\n",
-    "    sum_sigmoid = sum_row.sigmoid()\n",
+    "    difference_sigmoid = difference_row.sigmoid()\n",
     "    # if sigmoid() of the difference is > 0.5 :\n",
     "    # - The LARGER the difference, the more confidence that the input is a 3\n",
     "    # - The SMALLER the difference, the more confidence that the input is a 7\n",
-    "    is_three = sum_sigmoid > 0.5\n",
+    "    is_three = difference_sigmoid > 0.5\n",
     "    data.append([\n",
-    "        acts[i][0].tolist(), # 3\n",
-    "        acts[i][1].tolist(), # 7\n",
-    "        sum_row.tolist(), \n",
-    "        sum_sigmoid.tolist(), \n",
+    "        acts[i][0].tolist(), # 3 raw activation\n",
+    "        acts[i][1].tolist(), # 7 raw activation\n",
+    "        difference_row.tolist(),\n",
+    "        # manually subtract from one to get 7 probability since it's normalized\n",
+    "        difference_sigmoid.tolist(), # 3 probability \n",
     "        is_three.tolist()\n",
     "    ])\n",
     "\n",
     "# @audit 🖶 -- Verify that SIGMOID() is applied to the DIFFERENCE between values\n",
-    "pd.DataFrame(data, columns=['3', '7', 'SUM', 'SIGMOID', 'IS_THREE'])"
+    "pd.DataFrame(data, columns=['3', '7', 'DIFFERENCE', 'SIGMOID', 'IS_THREE'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from math import exp\n",
     "# Now we need to make this work for more than 2 columns/categories (three/seven)\n",
     "# @note 🧠 : Softmax is the multi-category extension to sigmoid, applicable when: \n",
     "# - categories > 2  \n",
@@ -875,12 +878,13 @@
     "    # defined as e**x, where is is approximately 2.718\n",
     "    # this is the inverse of the natural logarithm function \n",
     "    # exp is always positive and increases VERY rapidly\n",
+    "    # @audit-ok 🔎 : Explain why we are using the exponentential function\n",
     "    return exp(x)/exp(x).sum(dim=1, keepdim=True) # type: ignore"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -960,21 +964,24 @@
        "5   0.366118   0.633882  0.366118"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# @audit 🛑 : This errors out FIX IT!\n",
+    "# sm_acts = softmax(acts)\n",
     "sm_acts = torch.softmax(acts, dim=1)\n",
     "data = []\n",
     "for i in range(len(sm_acts)):\n",
     "    # recalculating the sigmoid of the difference between the 3/7 columns\n",
-    "    sum_sigmoid = (acts[i][0] - acts[i][1]).sigmoid()\n",
+    "    difference_sigmoid = (acts[i][0] - acts[i][1]).sigmoid()\n",
     "    data.append([\n",
-    "        sm_acts[i][0].tolist(), # 3\n",
-    "        sm_acts[i][1].tolist(), # 7\n",
-    "        sum_sigmoid.tolist()\n",
+    "        sm_acts[i][0].tolist(), # 3 softmax activation\n",
+    "        # YAaaay! Softmax calculates this for us\n",
+    "        sm_acts[i][1].tolist(), # 7 softmax activation\n",
+    "        difference_sigmoid.tolist()\n",
     "    ])\n",
     "\n",
     "# @audit 🖶 : Verify that SOFTMAX returns same value as SIGMOID for 2 categories\n",
@@ -1005,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1033,6 +1040,7 @@
        "      <th>7</th>\n",
        "      <th>TARGET</th>\n",
        "      <th>LOSS</th>\n",
+       "      <th>LABEL</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1042,6 +1050,7 @@
        "      <td>0.397531</td>\n",
        "      <td>0</td>\n",
        "      <td>0.602469</td>\n",
+       "      <td>--[3]--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1049,6 +1058,7 @@
        "      <td>0.497935</td>\n",
        "      <td>1</td>\n",
        "      <td>0.497935</td>\n",
+       "      <td>--[7]--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1056,6 +1066,7 @@
        "      <td>0.866811</td>\n",
        "      <td>0</td>\n",
        "      <td>0.133188</td>\n",
+       "      <td>--[3]--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1063,6 +1074,7 @@
        "      <td>0.003360</td>\n",
        "      <td>1</td>\n",
        "      <td>0.003360</td>\n",
+       "      <td>--[7]--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1070,6 +1082,7 @@
        "      <td>0.404051</td>\n",
        "      <td>1</td>\n",
        "      <td>0.404051</td>\n",
+       "      <td>--[7]--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1077,22 +1090,23 @@
        "      <td>0.633882</td>\n",
        "      <td>0</td>\n",
        "      <td>0.366118</td>\n",
+       "      <td>--[3]--</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          3         7  TARGET      LOSS\n",
-       "0  0.602469  0.397531       0  0.602469\n",
-       "1  0.502065  0.497935       1  0.497935\n",
-       "2  0.133188  0.866811       0  0.133188\n",
-       "3  0.996640  0.003360       1  0.003360\n",
-       "4  0.595949  0.404051       1  0.404051\n",
-       "5  0.366118  0.633882       0  0.366118"
+       "          3         7  TARGET      LOSS    LABEL\n",
+       "0  0.602469  0.397531       0  0.602469  --[3]--\n",
+       "1  0.502065  0.497935       1  0.497935  --[7]--\n",
+       "2  0.133188  0.866811       0  0.133188  --[3]--\n",
+       "3  0.996640  0.003360       1  0.003360  --[7]--\n",
+       "4  0.595949  0.404051       1  0.404051  --[7]--\n",
+       "5  0.366118  0.633882       0  0.366118  --[3]--"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,6 +1115,9 @@
     "from fastai.vision.data import tensor\n",
     "\n",
     "# Log Likelihood\n",
+    "# @note 🧠 : targ predicts the LOSS or performance of the model\n",
+    "# - targ is 0, then LOSS = performance of our model in predicting 3\n",
+    "# - targ is 1, then LOSS = performance of our model in predicting 7\n",
     "targ = tensor([0,1,0,1,1,0])\n",
     "idx = range(6)\n",
     "\n",
@@ -1113,11 +1130,21 @@
     "\n",
     "data = []\n",
     "for i in range(len(sm_acts)):\n",
+    "    row_target = targ[i].tolist() #[0]=>(3) or [1]=>(7)\n",
+    "    if row_target == 0:\n",
+    "        row_label = '--[3]--'\n",
+    "    else:\n",
+    "        row_label = '--[7]--'\n",
     "    data.append([\n",
-    "        sm_acts[i][0].tolist(), #3\n",
-    "        sm_acts[i][1].tolist(), #7\n",
-    "        targ[i].tolist(), \n",
-    "        loss[i].tolist()\n",
+    "        sm_acts[i][0].tolist(), #3 softmax activation\n",
+    "        sm_acts[i][1].tolist(), #7 softmax activation\n",
+    "        # picks the label (column)\n",
+    "        row_target, \n",
+    "        # based on targ label, picks the loss (softmax), if :\n",
+    "        # - targ is 0, then LOSS = performance of our model in predicting 3\n",
+    "        # - targ is 1, then LOSS = performance of our model in predicting 7\n",
+    "        loss[i].tolist(),\n",
+    "        row_label\n",
     "    ])\n",
     "\n",
     "# sm_acts[idx, targ] visualized as a table, we can see that :\n",
@@ -1126,12 +1153,13 @@
     "# - this LOSS lookup can scale to N categories by using the 'targ' tensor\n",
     "# @note 🧠 : This is how we move beyond training only 3/7 to all 0-9 digits by :\n",
     "# - Expand `targ`` to be a tensor of all 0-9 digits\n",
-    "# - Pick ONLY the COLUMN containing the CORRECT label\n",
-    "# - No need to worry about the other columns because SOFTMAX reduces the other \n",
-    "#   labels (by amplifying the ONE correct labael)\n",
-    "# - SOFTMAX by definition ensure that each `targ` tensor sums up to 1.0f\n",
+    "# - 'targ' picks ONLY the COLUMN containing the CORRECT label\n",
+    "# - SOFTMAX REDUCES the OTHER labels by AMPLIFYING the ONE label, no need to \n",
+    "#   worry about the other labels\n",
+    "# - he LOSS picked by 'targ' will CAPTURE how WELL we are PREDICTING\n",
+    "#   each digit!  Because SOFTMAX ensures that each ACTIVATION sums to 1.0f\n",
     "# @audit 🖶 : Verify that our loss and target are correct\n",
-    "pd.DataFrame(data, columns=['3', '7', 'TARGET', 'LOSS'])"
+    "pd.DataFrame(data, columns=['3', '7', 'TARGET', 'LOSS', 'LABEL'])"
    ]
   },
   {
@@ -1242,6 +1270,27 @@
     "    data.append(row)\n",
     "# @audit 🖶 : Verify that our manual and builtin loss calculations are the same\n",
     "pd.DataFrame(data, columns=['NLL_LOSS', '(-)SM_ACTS'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "Dimension out of range (expected to be in range of [-1, 0], but got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [45], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m nll_loss_tensor\u001b[39m.\u001b[39;49mtranspose(\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: Dimension out of range (expected to be in range of [-1, 0], but got 1)"
+     ]
+    }
+   ],
+   "source": [
+    "nll_loss_tensor.transpose(0,1)"
    ]
   },
   {
