Ch 5 CrossEntropy - add mindmap WIP

--- a/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
@@ -1263,11 +1263,10 @@
     "# function EQUIVALENT to our manual loss calculation above : sm_acts[idx, targ]\n",
     "# @note ⚠️ : DESPITE having LOG in the name, this Pytorch function does NOT \n",
     "# apply the LOG :\n",
-    "# - it ASSUMES you have ALREADY applied the LOG to your INPUT\n",
-    "# @note 🧠 The order of operations for CROSS ENTROPY LOSS is :\n",
-    "# - SOFTMAX\n",
-    "# - apply LOG\n",
-    "# - NLL_LOSS\n",
+    "# - it ASSUMES you have ALREADY applied the LOG to your INPUTS\n",
+    "# @note 🧠 : reduction='none' means that the loss is NOT averaged across the\n",
+    "# batch (returning a SCALAR) but instead returns a TENSOR of the same size as\n",
+    "# the INPUT (sm_acts)\n",
     "nll_loss_tensor = F.nll_loss(sm_acts, targ, reduction='none')\n",
     "\n",
     "# @audit-ok 🔎 : Explain how nll_loss applies the log afterwards, so the output \n",
@@ -1324,28 +1323,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- [LOSS REDUCTION TRUE] ---\n",
-      "1.8044618368148804\n",
+      "--- [CROSS ENTROPY REDUCTION TRUE] ---\n",
+      "1.8044618368148804   --  [-0.3345203697681427] -- (nll_loss_scalar)\n",
       "\n",
-      "--- [LOSS REDUCTION NONE] ---\n",
+      "--- [CROSS ENTROPY REDUCTION NONE] ---\n",
       "tensor([0.5067, 0.6973, 2.0160, 5.6958, 0.9062, 1.0048])\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CROSS ENTROPY</th>\n",
+       "      <th>-LOG(-NLL_LOSS)</th>\n",
+       "      <th>NLL_LOSS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.506720</td>\n",
+       "      <td>0.506720</td>\n",
+       "      <td>-0.602469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.697285</td>\n",
+       "      <td>0.697285</td>\n",
+       "      <td>-0.497935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.015990</td>\n",
+       "      <td>2.015990</td>\n",
+       "      <td>-0.133188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.695763</td>\n",
+       "      <td>5.695763</td>\n",
+       "      <td>-0.003360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.906213</td>\n",
+       "      <td>0.906213</td>\n",
+       "      <td>-0.404051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.004798</td>\n",
+       "      <td>1.004798</td>\n",
+       "      <td>-0.366118</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CROSS ENTROPY  -LOG(-NLL_LOSS)  NLL_LOSS\n",
+       "0       0.506720         0.506720 -0.602469\n",
+       "1       0.697285         0.697285 -0.497935\n",
+       "2       2.015990         2.015990 -0.133188\n",
+       "3       5.695763         5.695763 -0.003360\n",
+       "4       0.906213         0.906213 -0.404051\n",
+       "5       1.004798         1.004798 -0.366118"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from fastai.vision.core import nn\n",
     "\n",
-    "# Cross Entropy Loss is when we :\n",
-    "# 1) Apply softmax to activations\n",
-    "# 2) And then apply log likelihood to the softmax output\n",
+    "# @note 🧠 The order of operations for CROSS ENTROPY LOSS is :\n",
+    "# - SOFTMAX\n",
+    "# - apply LOG (log_softmax is the Pytorch function for these 2 steps)\n",
+    "# - NLL_LOSS\n",
+    "# @note 🧠 nn.CrossEntropyLoss() is the Pytorch function tfor 3 steps above\n",
     "\n",
     "# In pytorch this is available as an nn.CrossEntropyLoss() CLASS form\n",
     "# But it's also available as a PLAIN function form : \n",
@@ -1353,13 +1435,36 @@
     "# - DEFAULT is to use the CLASS form to match Pytorch's OFFICIAL docs\n",
     "loss_func = nn.CrossEntropyLoss()\n",
     "\n",
-    "# By default pytorch loss function takes the means of the loss of all items\n",
-    "means_loss_reduction = loss_func(acts, targ)\n",
+    "# By DEFAULT crossentropy loss function takes the \"MEANS\" of each loss item\n",
+    "cross_entropy_means = loss_func(acts, targ)\n",
     "\n",
     "# But we can use reduction='none' to disable that\n",
-    "means_loss_none = nn.CrossEntropyLoss(reduction='none')(acts, targ)\n",
-    "print(f'--- [LOSS REDUCTION TRUE] ---\\n{means_loss_reduction}\\n')\n",
-    "print(f'--- [LOSS REDUCTION NONE] ---\\n{means_loss_none}\\n')"
+    "cross_entropy_none = nn.CrossEntropyLoss(reduction='none')(acts, targ)\n",
+    "print(f'--- [CROSS ENTROPY REDUCTION TRUE] ---\\n{cross_entropy_means}   --  [{ F.nll_loss(sm_acts, targ, reduction=\"mean\")}] -- (nll_loss_scalar)\\n')\n",
+    "print(f'--- [CROSS ENTROPY REDUCTION NONE] ---\\n{cross_entropy_none}\\n')\n",
+    "# manually log nll_loss, also flip the sign since negative EXPONENTS return NaN\n",
+    "# @audit 🛑 : I don't UNDERSTAND log ... TRADE IN IGNORANCE and VERIFY lol\n",
+    "nll_loss_log = torch.log(-nll_loss_tensor) * -1\n",
+    "\n",
+    "data = []\n",
+    "for i in range(len(cross_entropy_none)):\n",
+    "    row = [\n",
+    "        cross_entropy_none[i].tolist(),\n",
+    "        nll_loss_log[i].tolist(),\n",
+    "        nll_loss_tensor[i].tolist()\n",
+    "    ]\n",
+    "    data.append(row)\n",
+    "\n",
+    "# @audit 🖶 : Compare NLL_LOSS to MEANS_LOSS (after applying LOG)\n",
+    "pd.DataFrame(data, columns=['CROSS ENTROPY', '-LOG(-NLL_LOSS)', 'NLL_LOSS'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`--- MODEL INTERPRETATION ---`**"
    ]
   },
   {
