mm Log ... unbending SIGMOID to LINEAR?

--- a/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
@@ -1343,23 +1343,24 @@
     "# However, log in Python uses the special number (2.718...) as the base\n",
     "\n",
     "# post log applied\n",
+    "# @audit 🛑 : What EXACTLY are we doing : LOG to unbend the SIGMOID to a LINEAR curve?\n",
     "plot_function(torch.log, min=0, max=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- [CROSS ENTROPY REDUCTION TRUE] ---\n",
+      "--- [CROSS ENTROPY LOSS REDUCTION=TRUE] ---\n",
       "# order of operations MATTER \n",
-      "- [ 1.8045] # -YES- : (1) cross_entropy + log   => (2) means \n",
-      "- [ 1.8045] # -YES- : (1) nll_loss => (2) log   => (3) means \n",
-      "- [ 1.0951] # -NO-- : (1) nll_loss => (2) means => (3) log\n",
+      "- [ 1.8045] # -YES- : (1) nn.CrossEntropyLoss (log)  => (2) means \n",
+      "- [ 1.8045] # -YES- : (1) nll_loss => (2) log        => (3) means \n",
+      "- [ 1.0951] # -NOO- : (1) nll_loss => (2) means      => (3) log\n",
       "\n",
       "--- [CROSS ENTROPY REDUCTION NONE] ---\n",
       "tensor([0.5067, 0.6973, 2.0160, 5.6958, 0.9062, 1.0048])\n",
@@ -1387,7 +1388,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CROSS ENTROPY</th>\n",
+       "      <th>CROSS ENTROPY LOSS</th>\n",
        "      <th>-LOG(-NLL_LOSS)</th>\n",
        "      <th>NLL_LOSS</th>\n",
        "    </tr>\n",
@@ -1434,16 +1435,16 @@
        "</div>"
       ],
       "text/plain": [
-       "   CROSS ENTROPY  -LOG(-NLL_LOSS)  NLL_LOSS\n",
-       "0       0.506720         0.506720 -0.602469\n",
-       "1       0.697285         0.697285 -0.497935\n",
-       "2       2.015990         2.015990 -0.133188\n",
-       "3       5.695763         5.695763 -0.003360\n",
-       "4       0.906213         0.906213 -0.404051\n",
-       "5       1.004798         1.004798 -0.366118"
+       "   CROSS ENTROPY LOSS  -LOG(-NLL_LOSS)  NLL_LOSS\n",
+       "0            0.506720         0.506720 -0.602469\n",
+       "1            0.697285         0.697285 -0.497935\n",
+       "2            2.015990         2.015990 -0.133188\n",
+       "3            5.695763         5.695763 -0.003360\n",
+       "4            0.906213         0.906213 -0.404051\n",
+       "5            1.004798         1.004798 -0.366118"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,10 +1475,10 @@
     "# @audit 🛑 : I don't UNDERSTAND log ... TRADE IN IGNORANCE and VERIFY lol\n",
     "nll_loss_log = torch.log(-nll_loss_tensor) * -1\n",
     "\n",
-    "print(f'--- [CROSS ENTROPY REDUCTION TRUE] ---\\n# order of operations MATTER ')\n",
-    "print(f'- [{cross_entropy_means:7.4f}] # -YES- : (1) cross_entropy + log   => (2) means ')\n",
-    "print(f'- [{nll_loss_log.mean():7.4f}] # -YES- : (1) nll_loss => (2) log   => (3) means ')\n",
-    "print(f'- [{-torch.log(-nll_loss_tensor.mean()):7.4f}] # -NO-- : (1) nll_loss => (2) means => (3) log\\n')\n",
+    "print(f'--- [CROSS ENTROPY LOSS REDUCTION=TRUE] ---\\n# order of operations MATTER ')\n",
+    "print(f'- [{cross_entropy_means:7.4f}] # -YES- : (1) nn.CrossEntropyLoss (log)  => (2) means ')\n",
+    "print(f'- [{nll_loss_log.mean():7.4f}] # -YES- : (1) nll_loss => (2) log        => (3) means ')\n",
+    "print(f'- [{-torch.log(-nll_loss_tensor.mean()):7.4f}] # -NOO- : (1) nll_loss => (2) means      => (3) log\\n')\n",
     "print(f'--- [CROSS ENTROPY REDUCTION NONE] ---\\n{cross_entropy_none}\\n')\n",
     "\n",
     "data = []\n",
@@ -1490,7 +1491,7 @@
     "    data.append(row)\n",
     "\n",
     "# @audit 🖶 : Compare NLL_LOSS to MEANS_LOSS (after applying LOG)\n",
-    "pd.DataFrame(data, columns=['CROSS ENTROPY', '-LOG(-NLL_LOSS)', 'NLL_LOSS'])"
+    "pd.DataFrame(data, columns=['CROSS ENTROPY LOSS', '-LOG(-NLL_LOSS)', 'NLL_LOSS'])"
    ]
   },
   {
