Ch 5 logging grokking WIP

--- a/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
@@ -1164,6 +1164,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`--- NEGATIVE LOG LIKELIHOOD ---`**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -1246,18 +1254,21 @@
    "source": [
     "from fastai.vision.data import F\n",
     "\n",
-    "# @note 🧠 : nll_loss (negative LOG LIKELIHOOD loss) is the built-in pytorch\n",
-    "# nll stands for :\n",
+    "# nll is taking the MEANS of the positive OR negative (depending on whether it's\n",
+    "# our correct or incorrect class) log of our PROBABILITIES :\n",
+    "# @audit 🛑 : Explain positive/negative log of probabilities and correct/incorrect\n",
+    "# class -- WHAT AM I MISSING HERE?\n",
     "# - NEGATIVE\n",
     "# - LOG\n",
     "# - LIKELIHOOD\n",
-    "# function EQUIVALENT to our manual loss calculation above : sm_acts[idx, targ]\n",
+    "# @note 🧠 : nll_loss (negative LOG LIKELIHOOD loss) is the built-in pytorch\n",
     "# @note ⚠️ : DESPITE having LOG in the name, this Pytorch function does NOT \n",
     "# apply the LOG :\n",
     "# - it ASSUMES you have ALREADY applied the LOG to your INPUTS\n",
     "# @note 🧠 : reduction='none' means that the loss is NOT averaged across the\n",
     "# batch (returning a SCALAR) but instead returns a TENSOR of the same size as\n",
     "# the INPUT (sm_acts)\n",
+    "# function EQUIVALENT to our manual loss calculation above : sm_acts[idx, targ]?\n",
     "nll_loss_tensor = F.nll_loss(sm_acts, targ, reduction='none')\n",
     "\n",
     "# @audit-ok 🔎 : Explain how nll_loss applies the log afterwards, so the output \n",
@@ -1492,6 +1503,18 @@
     "\n",
     "# @audit 🖶 : Compare NLL_LOSS to MEANS_LOSS (after applying LOG)\n",
     "pd.DataFrame(data, columns=['CROSS ENTROPY LOSS', '-LOG(-NLL_LOSS)', 'NLL_LOSS'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`--- CROSS ENTROPY GRADIENTS ---`**\n",
+    "\n",
+    "- The gradient of `cross_entropy(a,b)` is `softmax(a)-b`\n",
+    "- Since `softmax(a)` is the FINAL ACTIVATION of the model, the gradient is  \n",
+    "proportional to the DIFFERENCE between the prediction and the target"
    ]
   },
   {
