tensor transpose, mult and dot product

--- a/aiart/art_01_Intro_GradientDescent.ipynb
+++ b/aiart/art_01_Intro_GradientDescent.ipynb
@@ -627,6 +627,247 @@
     "instead. The `common standard arithmetic operators (+, -, \\*, /, and **)` have   \n",
     "all been `lifted to elementwise operations`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ADD] torch.add(x,y) = tensor([ 2,  4,  7, 12])\n",
+      "[ADD]          x + y = tensor([ 2,  4,  7, 12]) # element-wise addition\n",
+      "SCRATCHPAD for other ELEMENT-WISE operations : \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([ 2,  4,  7, 12]),\n",
+       " tensor([0, 0, 1, 4]),\n",
+       " tensor([ 1,  4, 12, 32]),\n",
+       " tensor([1.0000, 1.0000, 1.3333, 2.0000]),\n",
+       " tensor([   1,    4,   64, 4096]),\n",
+       " tensor([ 0,  0,  7, 12]))"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.tensor([1,2,4,8])\n",
+    "y = torch.tensor([1,2,3,4])\n",
+    "print(f'[ADD] torch.add(x,y) = {torch.add(x,y)}')\n",
+    "print(f'[ADD]          x + y = {x + y} # element-wise addition')\n",
+    "\n",
+    "print(f'SCRATCHPAD for other ELEMENT-WISE operations : ')\n",
+    "# @audit 🛑 : Explain what is x^y?  it's NOT exponentiation\n",
+    "x+y, x-y, x*y, x/y, x**y, x^y # the ** operator is exponentiation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**THINK/DISCUSS:** What does element-wise mean, inspect the outputs above and discuss\n",
+    "\n",
+    "ANSWER : `ELEMENT-WISE` operations is an operation performed `INDIVIDUALLY` on   \n",
+    "each `ELEMENT` of an set/array/matrix rather than the `ENTIRE` set/array/matrix  \n",
+    "as a `WHOLE`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tensors also have many built-in methods such as .mean() or .sum()  \n",
+    "(see the full list here: https://pytorch.org/docs/stable/tensors.html).  \n",
+    "Whenever you're working with a multi-dimensional tensor, pay attention  \n",
+    "to the dimensions and think about what result you're aiming to achieve."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--[x]-- \n",
+      "tensor([[0.4559, 0.7437, 0.1255],\n",
+      "        [0.0454, 0.4906, 0.5777],\n",
+      "        [0.6254, 0.9442, 0.3042]])\n",
+      "\n",
+      "[SUM] of every element : x.sum()       => 4.31257963180542\n",
+      "[SUM] of the columns   : x.sum(axis=0) => tensor([1.1267, 2.1785, 1.0074])\n",
+      "[SUM] of the rows      : x.sum(axis=1) => tensor([1.3251, 1.1137, 1.8738])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.rand(3,3)\n",
+    "print(f'--[x]-- \\n{x}\\n')\n",
+    "# sum() - note the axis is the axis your move across when summing\n",
+    "print(f'[SUM] of every element : x.sum()       => {x.sum()}')\n",
+    "print(f'[SUM] of the columns   : x.sum(axis=0) => {x.sum(axis=0)}') # type: ignore\n",
+    "print(f'[SUM] of the rows      : x.sum(axis=1) => {x.sum(axis=1)}') # type: ignore"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Coding Exercise 2\n",
+    "1) Display the means of each column in x\n",
+    "2) Make a new tensor `x_squared` which is x but every element has been raised to  \n",
+    "the power of 2\n",
+    "3) Find the sum of all elements in `x_squared`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1) [MEAN] of every column : x.mean(axis=0)   => tensor([0.3756, 0.7262, 0.3358])\n",
+      "(2) [SQUARED] new tensor : torch.tensor(x)**2 => \n",
+      "tensor([[0.2079, 0.5531, 0.0157],\n",
+      "        [0.0021, 0.2407, 0.3338],\n",
+      "        [0.3911, 0.8916, 0.0925]])\n",
+      "(3) [SUM] of every element : x_squared.sum() => 2.7284116744995117\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-147-a3f44f1ba324>:4: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  x_squared = torch.tensor(x)**2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_column_means = x.mean(axis=0) # type: ignore\n",
+    "print(f'(1) [MEAN] of every column : x.mean(axis=0)   => {x_column_means}')\n",
+    "\n",
+    "x_squared = torch.tensor(x)**2\n",
+    "print(f'(2) [SQUARED] new tensor : torch.tensor(x)**2 => \\n{x_squared}')\n",
+    "\n",
+    "x_squared_sum = x_squared.sum()\n",
+    "print(f'(3) [SUM] of every element : x_squared.sum() => {x_squared_sum}')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By `DEFAULT`, operations are `ELEMENT-WISE` ... but what if want the `MATRIX`  \n",
+    "operations?\n",
+    "\n",
+    "Here's how:\n",
+    "\n",
+    "1) `MATRIX MULTIPLICATION` : supported via `torch.matmul()` or the `@` symbol\n",
+    "2) `DOT MULTIPLICATION`    : supported via `torch.dot()  \n",
+    "// No, dot multiplication is not the same as dot product. Dot multiplication is  \n",
+    "not a well-defined operation and does not have a standard definition in  \n",
+    "mathematics. In contrast, dot product, also known as scalar product, is a  \n",
+    "specific mathematical operation that takes two equal-length sequences of  \n",
+    "numbers [1], usually coordinate vectors, and returns a scalar value. The dot  \n",
+    "product is defined as the sum of the products of the corresponding entries in  \n",
+    "the two vectors. It is an important concept in linear algebra and is often used  \n",
+    "in a variety of mathematical and scientific fields.  \n",
+    "// @audit 🛑 ... is this true?\n",
+    "3) `2D TENSOR TRANSPOSES`  : supported via `torch.t()` or `Tensor.T`  \n",
+    "// Note the lack of `Tensor.T` - it is an attribute, not a method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--[transpose_2d init]-- \n",
+      "tensor([[0.2438, 0.5490, 0.9276, 0.6331, 0.0828],\n",
+      "        [0.8358, 0.7554, 0.2274, 0.2831, 0.2605],\n",
+      "        [0.3505, 0.6449, 0.8632, 0.9883, 0.3067]])\n",
+      "\n",
+      "--[transpose_2d transposed]-- \n",
+      "tensor([[0.2438, 0.8358, 0.3505],\n",
+      "        [0.5490, 0.7554, 0.6449],\n",
+      "        [0.9276, 0.2274, 0.8632],\n",
+      "        [0.6331, 0.2831, 0.9883],\n",
+      "        [0.0828, 0.2605, 0.3067]])\n",
+      "\n",
+      "--[transpose_1d init]-- \n",
+      "tensor([0.9354, 0.9837, 0.5423, 0.4485, 0.6346])\n",
+      "\n",
+      "--[transpose_1d transposed]-- (does not work because !2D) \n",
+      "tensor([0.9354, 0.9837, 0.5423, 0.4485, 0.6346])\n",
+      "\n",
+      "--[transpose_3d init]-- \n",
+      "tensor([[[0.0202, 0.3933, 0.6190, 0.8129, 0.5222],\n",
+      "         [0.1849, 0.7497, 0.8772, 0.2550, 0.0181],\n",
+      "         [0.9651, 0.1973, 0.8316, 0.1424, 0.9925]],\n",
+      "\n",
+      "        [[0.4192, 0.9643, 0.0647, 0.7689, 0.8662],\n",
+      "         [0.1892, 0.7260, 0.4256, 0.6365, 0.6521],\n",
+      "         [0.9959, 0.9273, 0.7406, 0.2261, 0.6374]]])\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.2500)"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a few tensors and try some of these solutions\n",
+    "transpose_2d = torch.rand(3,5)\n",
+    "print(f'--[transpose_2d init]-- \\n{transpose_2d}\\n')\n",
+    "print(f'--[transpose_2d transposed]-- \\n{transpose_2d.t()}\\n')\n",
+    "\n",
+    "transpose_1d = torch.rand(5)\n",
+    "print(f'--[transpose_1d init]-- \\n{transpose_1d}\\n')\n",
+    "print(f'--[transpose_1d transposed]-- (does not work because !2D) \\n{transpose_1d.t()}\\n')\n",
+    "\n",
+    "transpose_3d = torch.rand(2,3,5)\n",
+    "print(f'--[transpose_3d init]-- \\n{transpose_3d}\\n')\n",
+    "# errors out because > 2D\n",
+    "# t() expects a tensor with <= 2 dimensions, but self is 3D\n",
+    "# print(f'--[transpose_3d transposed]-- \\n{transpose_3d.t()}\\n')\n",
+    "\n",
+    "ray_A = torch.tensor([0.0,1.0,0.0]) # y-axis\n",
+    "ray_B = torch.tensor([1.0,0.0,0.0]) # x-axis\n",
+    "ray_C = torch.tensor([0.5,0.5,0.0]) # 45°\n",
+    "ray_D = torch.tensor([0.5,0.0,0.5]) # 90°\n",
+    "ray_A.dot(ray_B)\n",
+    "ray_A.dot(ray_C)\n",
+    "ray_C.dot(ray_D)"
+   ]
   }
  ],
  "metadata": {
