--- a/aiart/art_01_Intro_GradientDescent.ipynb
+++ b/aiart/art_01_Intro_GradientDescent.ipynb
@@ -488,9 +488,13 @@
     }
    ],
    "source": [
+    "# Return evenly spaced values within a given interval.\n",
     "a = torch.arange(0, 30, step=3)\n",
     "print(f'--[a]-- # equivalent to np.arange(0, 30, step=3) \\n{a}\\n')\n",
     "\n",
+    "# np.linspace allows you to define how many values you get including the \n",
+    "# specified min and max value. It infers the stepsize:\n",
+    "# Return evenly spaced numbers over a specified interval.\n",
     "b = torch.linspace(0, 5, steps=11)\n",
     "print(f'--[b]-- # equivalent to np.linspace(0, 5, steps=11) \\n{b}\\n')"
    ]
@@ -515,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -526,66 +530,86 @@
       "[B = torch.Size([3, 4])] with elements equal to elements of [Z = (3, 4)]\n",
       "tensor same shape as [A], but UNIFORM random values between 0 and 1\n",
       "--[C]--\n",
-      "tensor([[0.0423, 0.4033, 0.2196, 0.6707, 0.2916, 0.4034, 0.0838, 0.3356, 0.2284,\n",
-      "         0.7554, 0.8566, 0.8783, 0.0260, 0.3767, 0.0644, 0.4646, 0.1413, 0.2997,\n",
-      "         0.2209, 0.2573, 0.3314],\n",
-      "        [0.1326, 0.9247, 0.9306, 0.5273, 0.7796, 0.5980, 0.7573, 0.1270, 0.4196,\n",
-      "         0.1755, 0.4138, 0.3255, 0.6899, 0.0407, 0.1646, 0.7420, 0.3677, 0.2729,\n",
-      "         0.3124, 0.7362, 0.0467],\n",
-      "        [0.8274, 0.2803, 0.6611, 0.8374, 0.4467, 0.9408, 0.0393, 0.3020, 0.8306,\n",
-      "         0.9814, 0.5391, 0.0393, 0.4159, 0.3216, 0.0972, 0.0354, 0.8122, 0.3477,\n",
-      "         0.2134, 0.9676, 0.4061],\n",
-      "        [0.8583, 0.3710, 0.5165, 0.7393, 0.3949, 0.6939, 0.9122, 0.6970, 0.5289,\n",
-      "         0.0350, 0.7512, 0.3038, 0.3974, 0.0746, 0.5663, 0.9123, 0.0488, 0.3902,\n",
-      "         0.4558, 0.9726, 0.9554],\n",
-      "        [0.4465, 0.8034, 0.3470, 0.8538, 0.0045, 0.4183, 0.6177, 0.5593, 0.5400,\n",
-      "         0.9212, 0.8676, 0.2790, 0.7487, 0.5197, 0.6267, 0.5851, 0.5082, 0.2504,\n",
-      "         0.7623, 0.8735, 0.8540],\n",
-      "        [0.7772, 0.5994, 0.9177, 0.2037, 0.5899, 0.6195, 0.4641, 0.1883, 0.4210,\n",
-      "         0.7300, 0.6835, 0.1102, 0.6765, 0.9413, 0.9838, 0.9768, 0.2596, 0.3930,\n",
-      "         0.5069, 0.3129, 0.2033],\n",
-      "        [0.4989, 0.2763, 0.1964, 0.4370, 0.8197, 0.1480, 0.2397, 0.1386, 0.1150,\n",
-      "         0.1594, 0.0519, 0.0204, 0.0453, 0.1629, 0.6292, 0.5151, 0.3435, 0.5453,\n",
-      "         0.9402, 0.9943, 0.5569],\n",
-      "        [0.2638, 0.1777, 0.6573, 0.1707, 0.8060, 0.0353, 0.6255, 0.7632, 0.4358,\n",
-      "         0.6381, 0.7442, 0.1264, 0.2600, 0.3189, 0.4402, 0.0346, 0.1864, 0.8234,\n",
-      "         0.5329, 0.0096, 0.9912],\n",
-      "        [0.7862, 0.9331, 0.0025, 0.5265, 0.1739, 0.4702, 0.4230, 0.2765, 0.8676,\n",
-      "         0.2440, 0.8956, 0.2554, 0.4484, 0.3650, 0.2106, 0.2720, 0.7200, 0.5785,\n",
-      "         0.1951, 0.3602, 0.4364],\n",
-      "        [0.4411, 0.3793, 0.9738, 0.1890, 0.9005, 0.2312, 0.0214, 0.6681, 0.3691,\n",
-      "         0.8775, 0.1907, 0.1834, 0.3589, 0.4775, 0.7820, 0.3423, 0.7484, 0.0967,\n",
-      "         0.0640, 0.8074, 0.8617],\n",
-      "        [0.4699, 0.2562, 0.9572, 0.8857, 0.0905, 0.5979, 0.4638, 0.3465, 0.2276,\n",
-      "         0.7093, 0.5870, 0.1855, 0.0401, 0.8393, 0.5207, 0.9340, 0.3020, 0.4085,\n",
-      "         0.4269, 0.7066, 0.1046],\n",
-      "        [0.0250, 0.7969, 0.9507, 0.1626, 0.9603, 0.0680, 0.4198, 0.2574, 0.6374,\n",
-      "         0.6574, 0.2112, 0.3044, 0.7632, 0.2999, 0.9823, 0.0597, 0.5454, 0.3407,\n",
-      "         0.3294, 0.9498, 0.9518],\n",
-      "        [0.5940, 0.9628, 0.7519, 0.7252, 0.5989, 0.6851, 0.5631, 0.6941, 0.3565,\n",
-      "         0.6461, 0.0478, 0.0763, 0.4358, 0.7089, 0.5658, 0.7336, 0.8327, 0.9063,\n",
-      "         0.3643, 0.0171, 0.1019],\n",
-      "        [0.9003, 0.0794, 0.1583, 0.7787, 0.5616, 0.4997, 0.6180, 0.8528, 0.6841,\n",
-      "         0.4070, 0.1798, 0.9592, 0.3763, 0.5447, 0.4988, 0.0925, 0.7318, 0.3845,\n",
-      "         0.5897, 0.0480, 0.0025],\n",
-      "        [0.3728, 0.0930, 0.4067, 0.2356, 0.5611, 0.3756, 0.5356, 0.3168, 0.2175,\n",
-      "         0.7103, 0.0966, 0.0752, 0.0913, 0.4040, 0.5376, 0.4621, 0.2735, 0.4158,\n",
-      "         0.3524, 0.8718, 0.0840],\n",
-      "        [0.2180, 0.9126, 0.1565, 0.4741, 0.2653, 0.2222, 0.1807, 0.2641, 0.4832,\n",
-      "         0.9745, 0.8401, 0.2334, 0.1916, 0.6153, 0.6759, 0.7527, 0.6676, 0.9499,\n",
-      "         0.0413, 0.1822, 0.7553],\n",
-      "        [0.7588, 0.7478, 0.2815, 0.8631, 0.4961, 0.4526, 0.2422, 0.8802, 0.4255,\n",
-      "         0.0609, 0.9860, 0.6720, 0.7579, 0.0822, 0.1436, 0.1904, 0.6949, 0.5650,\n",
-      "         0.1214, 0.9729, 0.7341],\n",
-      "        [0.3807, 0.4794, 0.4553, 0.2222, 0.0330, 0.2225, 0.3624, 0.0291, 0.7363,\n",
-      "         0.0587, 0.1617, 0.7094, 0.5431, 0.9443, 0.5800, 0.7398, 0.6144, 0.7165,\n",
-      "         0.2116, 0.0602, 0.1275],\n",
-      "        [0.7750, 0.9429, 0.5744, 0.1527, 0.8365, 0.7897, 0.1103, 0.6535, 0.8039,\n",
-      "         0.5679, 0.1227, 0.0713, 0.8650, 0.4075, 0.4395, 0.3148, 0.8113, 0.9377,\n",
-      "         0.8089, 0.9762, 0.0719],\n",
-      "        [0.6339, 0.8448, 0.5987, 0.8588, 0.7403, 0.6570, 0.2992, 0.5004, 0.9582,\n",
-      "         0.1489, 0.5550, 0.0980, 0.2861, 0.6404, 0.7223, 0.8897, 0.3360, 0.9807,\n",
-      "         0.2425, 0.0963, 0.9513]])\n",
+      "tensor([[2.9998e-02, 9.1884e-01, 9.8820e-01, 3.6230e-01, 8.2834e-02, 6.3005e-01,\n",
+      "         9.5247e-01, 6.7984e-02, 6.5256e-01, 9.7729e-01, 6.6674e-01, 6.2476e-01,\n",
+      "         6.5395e-01, 4.1543e-01, 7.1319e-01, 9.9551e-01, 3.2867e-01, 3.8970e-02,\n",
+      "         9.8498e-01, 2.4048e-01, 5.4636e-01],\n",
+      "        [7.3894e-01, 9.0073e-01, 9.8941e-02, 1.6161e-01, 3.1372e-01, 4.7992e-01,\n",
+      "         8.1472e-02, 2.3431e-01, 2.9640e-01, 3.7093e-02, 2.3923e-01, 3.0525e-01,\n",
+      "         5.6593e-01, 7.7166e-01, 2.5792e-01, 3.3116e-01, 1.7133e-01, 2.7700e-01,\n",
+      "         2.8203e-01, 5.3588e-01, 2.9605e-01],\n",
+      "        [1.1232e-01, 5.2142e-01, 9.9961e-01, 9.2133e-01, 9.0335e-01, 9.6977e-01,\n",
+      "         1.8755e-01, 6.8965e-01, 3.5129e-01, 8.9246e-01, 2.6118e-01, 6.9413e-01,\n",
+      "         8.2128e-01, 6.9413e-01, 6.2506e-01, 2.2768e-01, 4.0457e-01, 5.1692e-01,\n",
+      "         7.6287e-01, 2.1329e-01, 1.9373e-01],\n",
+      "        [2.9290e-01, 4.9015e-02, 8.0629e-01, 4.0577e-01, 6.6050e-01, 5.5264e-01,\n",
+      "         7.3161e-01, 2.7966e-01, 6.2645e-01, 4.5715e-01, 3.1690e-01, 7.7280e-01,\n",
+      "         7.7272e-01, 2.9068e-01, 2.9699e-01, 3.2433e-01, 2.1182e-01, 1.5535e-01,\n",
+      "         2.9065e-01, 6.3601e-01, 4.9079e-01],\n",
+      "        [9.8863e-01, 2.8798e-02, 1.0674e-01, 5.0276e-02, 7.8982e-01, 4.8934e-01,\n",
+      "         8.2906e-02, 6.9601e-01, 4.9929e-01, 5.9736e-01, 2.1682e-01, 6.7730e-01,\n",
+      "         8.9864e-01, 4.7862e-02, 3.8721e-02, 5.8042e-01, 4.3512e-02, 9.9768e-01,\n",
+      "         2.4614e-01, 6.5066e-01, 9.9483e-01],\n",
+      "        [6.1327e-01, 5.4662e-01, 6.5488e-01, 5.3378e-01, 4.4742e-01, 1.6276e-01,\n",
+      "         7.0664e-01, 7.1648e-01, 5.6525e-01, 9.2752e-01, 7.6997e-01, 8.1323e-01,\n",
+      "         7.8261e-01, 6.8377e-01, 9.1140e-01, 4.6455e-01, 5.5522e-02, 9.5342e-01,\n",
+      "         6.9825e-01, 9.1915e-01, 1.4882e-01],\n",
+      "        [8.2230e-01, 1.4351e-01, 4.2953e-01, 7.8836e-01, 2.4469e-01, 2.1885e-01,\n",
+      "         4.9391e-01, 4.7133e-01, 3.4875e-01, 5.8177e-01, 8.3275e-01, 7.2032e-01,\n",
+      "         6.9929e-01, 9.9587e-01, 1.2911e-01, 8.5715e-01, 2.5859e-03, 9.6395e-01,\n",
+      "         6.4754e-02, 7.9934e-01, 1.0896e-01],\n",
+      "        [8.1284e-01, 2.3144e-04, 3.6781e-01, 2.1729e-01, 8.9657e-01, 5.2514e-01,\n",
+      "         8.2863e-01, 7.4716e-01, 9.7200e-03, 4.5517e-01, 8.5471e-01, 2.4608e-01,\n",
+      "         3.6469e-01, 5.5482e-01, 8.3565e-01, 3.4368e-01, 3.5474e-01, 8.6874e-01,\n",
+      "         9.0145e-01, 3.2639e-01, 1.2847e-01],\n",
+      "        [9.0751e-01, 9.0763e-02, 5.8355e-01, 2.8733e-01, 4.7498e-01, 3.2787e-01,\n",
+      "         3.8940e-01, 1.4930e-01, 5.9506e-01, 7.6210e-01, 3.3191e-01, 1.3937e-01,\n",
+      "         9.2647e-01, 3.8583e-01, 3.2798e-01, 3.2793e-01, 4.7486e-02, 8.5434e-02,\n",
+      "         6.6800e-01, 2.8455e-01, 5.5422e-01],\n",
+      "        [3.9538e-01, 7.3512e-01, 8.3025e-01, 8.4160e-01, 3.0394e-02, 5.6807e-01,\n",
+      "         8.0953e-01, 7.2683e-02, 1.6736e-02, 6.9650e-03, 9.0932e-01, 3.1224e-01,\n",
+      "         9.2540e-01, 3.6887e-01, 1.1074e-01, 3.4526e-02, 6.8284e-01, 4.5261e-01,\n",
+      "         4.7233e-01, 4.2280e-01, 8.8025e-01],\n",
+      "        [3.0189e-03, 4.7085e-01, 4.7271e-01, 4.6131e-01, 5.7208e-01, 8.3907e-01,\n",
+      "         2.2043e-01, 1.5127e-01, 1.5557e-02, 4.1560e-01, 4.3158e-01, 5.8719e-01,\n",
+      "         8.0254e-01, 3.9844e-01, 8.0296e-01, 5.6527e-01, 7.8597e-02, 1.6355e-01,\n",
+      "         2.5648e-01, 7.5925e-01, 5.7514e-01],\n",
+      "        [1.1726e-03, 1.4208e-01, 5.1178e-01, 5.8019e-01, 9.7588e-01, 7.6605e-01,\n",
+      "         7.7210e-01, 8.2422e-01, 2.8011e-01, 7.8433e-01, 2.7140e-01, 4.5517e-01,\n",
+      "         6.1996e-01, 8.1042e-01, 5.6119e-01, 8.9383e-01, 4.9206e-01, 8.3239e-01,\n",
+      "         7.5720e-01, 9.7128e-01, 9.4363e-01],\n",
+      "        [8.1624e-01, 2.9262e-01, 5.7551e-01, 1.4871e-01, 4.8862e-01, 7.8736e-01,\n",
+      "         5.4121e-01, 9.9222e-01, 6.3671e-01, 7.0533e-01, 5.9170e-01, 1.2456e-01,\n",
+      "         3.6735e-01, 3.6569e-02, 9.1299e-02, 6.9779e-01, 7.7242e-01, 7.0007e-01,\n",
+      "         8.1357e-01, 5.1138e-01, 6.3622e-01],\n",
+      "        [7.0802e-01, 7.9383e-01, 8.8853e-01, 1.9923e-01, 7.4412e-02, 3.3314e-01,\n",
+      "         7.3285e-01, 1.8651e-01, 4.7501e-01, 7.3232e-01, 8.8828e-01, 3.1584e-02,\n",
+      "         2.8322e-01, 5.4206e-01, 7.8498e-01, 3.5321e-01, 5.3022e-01, 7.4496e-01,\n",
+      "         6.6612e-01, 3.6916e-01, 2.4451e-01],\n",
+      "        [5.3698e-01, 1.2006e-02, 7.9962e-01, 9.5448e-01, 8.0049e-01, 2.1163e-01,\n",
+      "         9.9910e-01, 1.3734e-01, 9.3833e-01, 8.4353e-01, 3.6469e-01, 8.0866e-01,\n",
+      "         2.3938e-01, 2.5289e-01, 4.5647e-02, 8.5592e-01, 9.9856e-01, 8.2995e-01,\n",
+      "         4.0184e-02, 5.1779e-01, 3.1781e-01],\n",
+      "        [9.0130e-01, 1.5005e-01, 2.6074e-01, 8.2117e-01, 6.4150e-01, 6.3832e-01,\n",
+      "         6.5245e-01, 3.9787e-01, 3.2513e-02, 6.4266e-01, 9.4128e-01, 1.3285e-01,\n",
+      "         6.1002e-01, 5.4395e-01, 3.4671e-01, 8.7714e-01, 7.7523e-02, 8.6308e-02,\n",
+      "         9.9359e-01, 6.2298e-01, 9.5360e-01],\n",
+      "        [6.8130e-02, 7.3129e-01, 8.5811e-01, 1.7048e-01, 2.2458e-01, 8.1894e-01,\n",
+      "         9.8582e-01, 2.4078e-01, 6.1552e-02, 1.8123e-02, 3.1689e-01, 8.3244e-01,\n",
+      "         3.6705e-01, 2.4150e-01, 9.2211e-01, 1.6776e-01, 8.8479e-01, 6.9931e-01,\n",
+      "         1.7783e-01, 2.6642e-01, 2.8973e-01],\n",
+      "        [9.2121e-02, 4.7640e-01, 7.0111e-01, 8.1982e-01, 2.4148e-01, 9.6845e-01,\n",
+      "         6.1751e-01, 9.4773e-01, 8.9885e-01, 2.5645e-01, 4.3155e-01, 5.2903e-01,\n",
+      "         9.6323e-01, 8.4546e-02, 6.8419e-02, 2.9494e-01, 4.8959e-01, 3.4351e-01,\n",
+      "         6.9268e-01, 5.6716e-01, 6.6961e-01],\n",
+      "        [8.1849e-01, 4.1787e-01, 9.0728e-01, 1.0102e-01, 8.1634e-01, 7.1608e-01,\n",
+      "         1.8123e-01, 9.0152e-01, 6.2406e-01, 9.1827e-01, 5.6045e-01, 2.4026e-01,\n",
+      "         4.3150e-01, 8.1706e-01, 9.4680e-01, 5.9262e-01, 6.4366e-01, 4.8569e-01,\n",
+      "         4.3605e-01, 4.4532e-01, 2.9662e-01],\n",
+      "        [2.0495e-01, 9.9388e-01, 4.6247e-01, 1.1196e-01, 6.3979e-01, 6.1161e-01,\n",
+      "         2.9378e-01, 4.9663e-02, 5.1123e-01, 5.0022e-01, 7.3507e-01, 7.6537e-01,\n",
+      "         2.4429e-01, 4.7650e-01, 9.0504e-01, 6.8175e-01, 5.1527e-01, 1.5942e-02,\n",
+      "         1.4037e-01, 9.5643e-01, 1.5827e-01]])\n",
       "\n",
       "1D tensor of even numbers from 4 to 40 inclusive => [D]\n",
       "tensor([ 4,  6,  8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38,\n",
@@ -608,7 +632,7 @@
     "C = torch.rand_like(A)\n",
     "print(f'tensor same shape as [A], but UNIFORM random values between 0 and 1\\n--[C]--\\n{C}\\n')\n",
     "\n",
-    "D = torch.arange(4, 41, step=2) # 41 end to include 40\n",
+    "D = torch.arange(4, 41, step=2) # to be inclusive of 40, we need end=41 (40+1)\n",
     "print(f'1D tensor of even numbers from 4 to 40 inclusive => [D]\\n{D}')\n",
     "# "
    ]
@@ -860,6 +884,7 @@
     "# t() expects a tensor with <= 2 dimensions, but self is 3D\n",
     "# print(f'--[transpose_3d transposed]-- \\n{transpose_3d.t()}\\n')\n",
     "\n",
+    "# @audit 🛑 : Understand if dot product is the same as shader normal and light direction\n",
     "ray_A = torch.tensor([0.0,1.0,0.0]) # y-axis\n",
     "ray_B = torch.tensor([1.0,0.0,0.0]) # x-axis\n",
     "ray_C = torch.tensor([0.5,0.5,0.0]) # 45°\n",
@@ -867,6 +892,166 @@
     "ray_A.dot(ray_B)\n",
     "ray_A.dot(ray_C)\n",
     "ray_C.dot(ray_D)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.3 Manipulating Tensors\n",
+    "\n",
+    "Beyond mathematical operations, we often want to : \n",
+    "* access specific items or sets of items in a tensor  \n",
+    "* perform operations like changing the shape of a tensor\n",
+    "\n",
+    "Here are a few examples of some common tasks. These may feel simple if you're  \n",
+    "used to something like numpy, but it's worth making sure you know how to do these  \n",
+    "basic operations (or at least, you know where to find these examples again to  \n",
+    "refer to them!) since we'll use these a lot in the coming lessons."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x      => tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+      "x[-1]  => 9 # last element\n",
+      "x[1:3] => tensor([1, 2]) # idx 1 up to BUT NOT INCLUDING index 3\n",
+      "x[:-2] => tensor([0, 1, 2, 3, 4, 5, 6, 7]) # ALL elements up to BUT NOT INCLUDING the last 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Indexing Tensors\n",
+    "x = torch.arange(0, 10)\n",
+    "print(f'x      => {x}')\n",
+    "print(f'x[-1]  => {x[-1]} # last element')\n",
+    "print(f'x[1:3] => {x[1:3]} # idx 1 up to BUT NOT INCLUDING index 3')\n",
+    "print(f'x[:-2] => {x[:-2]} # ALL elements up to BUT NOT INCLUDING the last 2')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reshaping works when the Tensors shapes are compatible : \n",
+    "* (3,4) => (8,2) --  NO -- because not enough elements (12 != 16)\n",
+    "* (3,4) => (4,3) -- YES -- same elements (3*4 and 4*3 = 12)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- [original]   z (6,2) --\n",
+      "tensor([[ 0,  1],\n",
+      "        [ 2,  3],\n",
+      "        [ 4,  5],\n",
+      "        [ 6,  7],\n",
+      "        [ 8,  9],\n",
+      "        [10, 11]])\n",
+      "-- [transposed] z (2,6) --\n",
+      "tensor([[ 0,  2,  4,  6,  8, 10],\n",
+      "        [ 1,  3,  5,  7,  9, 11]])\n",
+      "-- [flattened]  z (12,) --\n",
+      "tensor([ 0,  2,  4,  6,  8, 10,  1,  3,  5,  7,  9, 11])\n",
+      "-- [reshaped]   z (3,4) --\n",
+      "tensor([[ 0,  2,  4,  6],\n",
+      "        [ 8, 10,  1,  3],\n",
+      "        [ 5,  7,  9, 11]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reshaping\n",
+    "z = torch.arange(12).reshape(6,2)\n",
+    "print(f'-- [original]   z (6,2) --\\n{z}')\n",
+    "\n",
+    "#transpose\n",
+    "z = z.t()\n",
+    "print(f'-- [transposed] z (2,6) --\\n{z}')\n",
+    "\n",
+    "#2d => 1d : APPENDS row by row until it has a 1d array\n",
+    "z = z.flatten()\n",
+    "print(f'-- [flattened]  z (12,) --\\n{z}')\n",
+    "\n",
+    "# and back to 2d\n",
+    "z = z.reshape(3,4)\n",
+    "print(f'-- [reshaped]   z (3,4) --\\n{z}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[torch.cat] is used to concatenate tensors  \n",
+    "Take note of these examples, and how the dimension specified affects the output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--[x]-- \n",
+      "tensor([[ 0.,  1.,  2.,  3.],\n",
+      "        [ 4.,  5.,  6.,  7.],\n",
+      "        [ 8.,  9., 10., 11.]])\n",
+      "\n",
+      "--[y]-- \n",
+      "tensor([[2., 1., 4., 3.],\n",
+      "        [1., 2., 3., 4.],\n",
+      "        [4., 3., 2., 1.]])\n",
+      "\n",
+      "-- [torch.cat((x,y), dim=0)] -- #rows \n",
+      "--> [6,4] <-- (3,4) + (3,4)\n",
+      "tensor([[ 0.,  1.,  2.,  3.],\n",
+      "        [ 4.,  5.,  6.,  7.],\n",
+      "        [ 8.,  9., 10., 11.],\n",
+      "        [ 2.,  1.,  4.,  3.],\n",
+      "        [ 1.,  2.,  3.,  4.],\n",
+      "        [ 4.,  3.,  2.,  1.]])\n",
+      "\n",
+      "-- [torch.cat((x,y), dim=1)] -- #columns \n",
+      "--> [3,8] <-- (3,4) + (3,4)\n",
+      "tensor([[ 0.,  1.,  2.,  3.,  2.,  1.,  4.,  3.],\n",
+      "        [ 4.,  5.,  6.,  7.,  1.,  2.,  3.,  4.],\n",
+      "        [ 8.,  9., 10., 11.,  4.,  3.,  2.,  1.]])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create tensors of the same shape\n",
+    "x = torch.arange(12, dtype=torch.float32).reshape(3,4)\n",
+    "print(f'--[x]-- \\n{x}\\n')\n",
+    "y = torch.tensor([[2.0,1,4,3],[1,2,3,4],[4,3,2,1]])\n",
+    "print(f'--[y]-- \\n{y}\\n')\n",
+    "\n",
+    "# Concatenate tensors along rows\n",
+    "cat_rows = torch.cat((x,y), dim=0) # dim=0 is the rows\n",
+    "print(f'-- [torch.cat((x,y), dim=0)] -- #rows \\n--> [6,4] <-- (3,4) + (3,4)\\n{cat_rows}\\n')\n",
+    "\n",
+    "# Concatenate tensors along columns\n",
+    "cat_columns = torch.cat((x,y), dim=1) # dim=1 is the columns\n",
+    "print(f'-- [torch.cat((x,y), dim=1)] -- #columns \\n--> [3,8] <-- (3,4) + (3,4)\\n{cat_columns}\\n')"
    ]
   }
  ],
